--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "sweeeeep/l5popularity",
-    "description": ":description",
+    "description": "Laravel Package for Tracking popular item in Eloquent models",
     "license": "MIT",
     "authors": [
         {
@@ -12,11 +12,12 @@
     "homepage": "https://github.com/sweeeeep/popularity",
     "keywords": ["Laravel", "Popularity"],
     "require": {
-        "illuminate/support": "~5"
+        "php": "^7.2",
+        "illuminate/support": "^6.0|^7.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "~6.0",
-        "orchestra/testbench": "~3.0"
+        "orchestra/testbench": "^4.4|^5.0",
+        "phpunit/phpunit": "^8.0"
     },
     "autoload": {
         "classmap": [
